added navbar and mobile responsive

--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="quicksand-font">
     <header>
+        <nav>
+           <div class="navbar display-flex">
+
+            <div class="logo display-flex">
+                <img src="assets/logo.png" alt="">
+                <h2 class="site-name">School</h2>
+            </div>
+
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a class="nav-link active-1 home" href="">Home</a></li>
+                <li class="nav-item"><a class="nav-link active-2 about" href="">About</a></li>
+                <li class="nav-item"><a class="nav-link active-3 facilities" href="">Facilities</a></li>
+                <li class="nav-item"><a class="nav-link active-4 admission" href="">Admission</a></li>
+            </ul>
+            <button class="btn-primary btn-display">Contact</button>
+            <a  href="" class="icon display-hidden">
+                <i class="fa fa-bars"></i></a>
+
+           </div>
+        </nav>
+     
 
     </header>
     <main>
+        <div></div>
 
     </main>
     <footer>
