banner section added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@
 
            </div>
         </nav>
-     
+       <div class="banner">
+        <div class="banner-container display-flex">
+            <div class="banner-content">
+                <h1 class="banner-title"><span id="text-1">Empowering</span><br>
+                   <span id="text-3"> students from small age</span><br><span id="text-2">towards vision</span></h1>
+            <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+            <button class="btn-primary-2">Enroll Now</button>
+            </div>
+            <div class="banner-image">
+                <img src="assets/hero-kids.png" alt="">
+
+            </div>
+        </div>
+       </div>
 
     </header>
     <main>
