added standard curriculum section and responsive

--- a/index.html
+++ b/index.html
@@ -46,7 +46,47 @@
 
     </header>
     <main>
-        <div></div>
+        <section class="standard-curriculum">
+            <h1 class="section-title">Standard Curriculum</h1>
+            <div class="curriculum-container max-width">
+                <div class="curriculum-curd gradient-1">
+                     <div>
+                        <img src="assets/elementary.png" alt="" class="curd-icon">
+                        <h4 class="card-title">Kinder (3-6) Years</h4>
+                        <p class="card-description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient
+                        </p>
+                        <button class="card-btn card-btn-1">Read More</button>
+                     </div>
+                        
+                    
+                </div>
+                <div class="curriculum-curd gradient-2">
+                    <div>
+                        <img src="assets/kinder.png" alt="" class="curd-icon">
+                        <h4 class="card-title">Elementary School</h4>
+                        <p class="card-description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient
+                        </p>
+                        <button class="card-btn card-btn-2 ">Read More</button>
+                    </div>
+                </div>
+                <div class="curriculum-curd gradient-3">
+                    <div>
+                        <img src="assets/middle.png" alt="" class="curd-icon">
+                        <h4 class="card-title">Middle(10-16) Years</h4>
+                        <p class="card-description">Cum sociis natoque penatibus et magnis
+                            dis parturient montes, nascetur ridiculus
+                            mu sdis parturient
+                        </p>
+                        <button class="card-btn card-btn-3">Read More</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
