removeing lorem ipsum

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
                      <div>
                         <img src="assets/elementary.png" alt="" class="curd-icon">
                         <h4 class="card-title">Kinder (3-6) Years</h4>
-                        <p class="card-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient
+                        <p class="card-description">A standard Kindergarten curriculum for children aged 3-6 years typically covers key areas like language development (reading, writing, speaking),
                         </p>
                         <button class="card-btn card-btn-1">Read More</button>
                      </div>
@@ -71,9 +69,7 @@
                     <div>
                         <img src="assets/kinder.png" alt="" class="curd-icon">
                         <h4 class="card-title">Elementary School</h4>
-                        <p class="card-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient
+                        <p class="card-description">The 3rd grade reading curriculum includes standards and skills related to fluency, decoding, comprehension, and vocabulary. Third graders also practice ...
                         </p>
                         <button class="card-btn card-btn-2 ">Read More</button>
                     </div>
@@ -82,9 +78,7 @@
                     <div>
                         <img src="assets/middle.png" alt="" class="curd-icon">
                         <h4 class="card-title">Middle(10-16) Years</h4>
-                        <p class="card-description">Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus
-                            mu sdis parturient
+                        <p class="card-description">In Grade 9 and 10, students make a choice of one Arts subject from among Visual Arts, Music and Drama. At Grade 9 and 10 students are placed in either standard ...
                         </p>
                         <button class="card-btn card-btn-3">Read More</button>
                     </div>
